--- a/index.html
+++ b/index.html
@@ -14,8 +14,25 @@
     <button class="botao"> Arrumar um emprego</button>
     <button class="botao"> Juntar 5 mil reais</button>
     <button class="botao"> Viajar para Paris </button>
-
 </div>
+    </section>
+    <section class="aba-textos">
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Dia da Formatura</h3>
+            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+        </div>
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Colhedor de Soja</h3>
+            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+        </div>
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Guardar mensalmente</h3>
+            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+        </div>
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Comprar a passagem</h3>
+            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+        </div>
     </section>
     <script src="main.js"></script>
 </body>
